--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ a:hover {
 .nav > li a:focus {
     background: transparent;
 }
-
+/*A supprimer */
 .navbar-toggle {
     margin: 10px 10px 0 0;
     border: 0px;
@@ -350,6 +350,7 @@ a:hover {
     background-color: rgba(0, 0, 0, .5);
     width: 26px;
 }
+/*A supprimer */
 
 .nav-invert .navbar .nav {
     float: left;
@@ -360,6 +361,27 @@ a:hover {
     float: right;
     position: relative;
     z-index: 2;
+}
+
+.col-xs-12{
+    font-size: 20px;
+  }
+
+figure p{
+    font-style: italic;
+    font-size: 20px;
+}
+
+form .form-control, form button{
+    width: 100%;
+}
+
+p{
+    font-size: 16px;
+}
+
+#adresse p{
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -514,7 +536,7 @@ button {
     width: 40px;
     height: 40px;
     position: fixed;
-    bottom: 20px;
+    bottom: 55px;
     right: 20px;
     opacity: 0;
     z-index: 500;
@@ -677,7 +699,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -701,8 +723,11 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
-}
+    margin: auto auto 5px auto;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+  }
 
 h2 {
     font-size: 22px;
@@ -740,7 +765,8 @@ h4 {
 }
 
 .portfolio-thumb {
-    margin-bottom: 24px;
+    /*margin-bottom: 24px;*/
+    margin: auto;
 }
 
 .portfolio-row {
@@ -775,7 +801,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
@@ -848,13 +874,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -873,8 +899,8 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        /*padding-left: env(safe-area-inset-left);*/
+        /*padding-right: env(safe-area-inset-right);*/
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -884,8 +910,8 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        /*padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right);*/
     }
 }
 
@@ -1026,6 +1052,14 @@ h4 {
         width: 180px;
         height: 320px;
     }
+
+    #adresse{
+        margin-top: 20px;
+    }
+    .lightbox-caption {
+        bottom: 0px;
+        font-size: 11px;
+      }
 }
 
 @media (max-width: 400px) {
@@ -1040,3 +1074,4 @@ h4 {
         text-align: center;
     }
 }
+
